2004-09-28  Kenichi Handa  <handa@m17n.org>

	* m17n-X.c (MXFont, MXFontList): New types.
	(MDisplayInfo): Delete members font_registry_list,
	iso8859_1_family_list, iso10646_1_family_list, new members
	font_list, base_font_list.
	(free_display_info): Adusted for the change of MDisplayInfo.
	(xfont_driver): Initialize with xfont_list.
	(font_compare): New function.
	(build_font_list): Deleted.
	(xfont_registry_list): New function.
	(xfont_select): Use xfont_registry_list.
	(xfont_list): New function.
	(device_open): Adusted for the change of MDisplayInfo.

	* font-ft.c (add_font_info): New arg languages.  Callers changed.
	(fc_list): Get languages from fonts..
	(ft_list_all): Renamed from ft_list.  Callers changed.
	(ft_list): New function.
	(mfont__ft_driver): Initalize with ft_list.

	* font.c (mfont_list): New function.

	* font.h (struct MFontDriver): New member `list'.
	(MFTInfo): New member languages.

	* m17n-gui.h (mfont_list): Extern it.

2004-09-27  Kenichi Handa  <handa@m17n.org>

	* internal-gui.h (struct MGlyphString): Delete members mt,
	sub_width, sub_lbrearing, sub_rbearing, and region.

	* draw.c (MSubTextExtents): New type.
	(layout_glyphs): New arg extents.  Set its members.
	(layout_glyph_string): Adjusted for the above change.
	(alloc_gstring): Don't set gstring->mt.
	(truncate_gstring): Call line_break function with mt instead of
	gstring->mt.

2004-09-22  Kenichi Handa  <handa@m17n.org>

	* mtext.c (count_utf_16_chars): Count each code of invalid
	surrogates as one.

2004-09-19  Kenichi Handa  <handa@m17n.org>

	* mtext.c (default_utf_16, default_utf_32): Rename them to
	MTEXT_FORMAT_UTF_16 and MTEXT_FORMAT_UTF_32 respectively.  Caller
	changed.

	* m17n-core.h (MTEXT_FORMAT_UTF_16, MTEXT_FORMAT_UTF_32): Extern
	them.

2004-09-13  Kenichi Handa  <handa@m17n.org>

	* draw.c (Mlatin): Don't declare it here.
	(visual_order): Fix reordering of combining characters.
	(compose_glyph_string): Fix detection of script.